--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ default-run = "kino-api"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+levenshtein = "1.0.5"
