--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,24 @@ edition = "2021"
 default-run = "kino-api"
 
 [dependencies]
+levenshtein = "1.0.5"
+dotenv = "0.15"
+lazy_static = "1.5"
+jsonwebtoken = "9"
+validator = { version = "0.18", features = ["derive"] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 tokio = { version = "1", features = ["full"] }
-reqwest = "0.12"
+axum = "0.7"
+tower = { version = "0.5", features = ["full"] }
+tower-http = { version = "0.5", features = ["full"] }
 
-levenshtein = "1.0.5"
+sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
 
-jsonwebtoken = "9"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = "0.3"
+
 cache_control  = "0.2.0"
+reqwest = "0.12"
