--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ lazy_static = "1.5"
 jsonwebtoken = "9"
 validator = { version = "0.18", features = ["derive"] }
 paste = "1"
+chrono = "0.4"
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
