--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ lazy_static = "1.5"
 jsonwebtoken = "9"
 validator = { version = "0.18", features = ["derive"] }
 paste = "1"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -21,7 +21,7 @@ axum = { version = "0.7", features = ["macros"] }
 tower = { version = "0.5", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
 
-sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono"] }
 redis = { version = "*", features = ["tokio-comp", "aio"] }
 
 tracing = { version = "0.1", features = ["log"] }
