feat: Docker compose

--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 GOOGLE_CLIENT_ID=123123213-myapp.apps.googleusercontent.com
-WN_DATABASE=/wn/dict/
-HOST=localhost:8081
-DATABASE_URL=postgres://user:p@$$w0rd@localhost/database-name
-REDIS_URL=redis://127.0.0.1/
+WN_DATABASE=/app/wn/
+HOST=0.0.0.0:8081
+DATABASE_URL=postgres://kino:kino@postgres/kino
+REDIS_URL=redis://redis/
 JWT_SECRET=change_me
